--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -71,7 +71,7 @@ aside a {
     bottom: 0;
     width: 300px;
     padding: 15px 15px 10000px;
-    background: #29B6F6;
+    background: #01579b;
     color: #fff;
     line-height: 1.5;
     -webkit-box-sizing: border-box;
