--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -180,7 +180,7 @@ h2 {
 
 .main-info dt {
     font-size: 24px;
-    color: $mainColor;
+    color: $thirdColor;
     line-height: 30px;
     border-bottom: 1px solid #{$mainColor};
     margin: 0 0 15px -5px;
